# magnum-specs

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  template.rst
specs/: template.rst
specs/bobcat/: clusterapi-driver.rst
specs/caracal/: control-plane-resize.rst  improve-driver-discovery.rst
specs/flamingo/: credential-rotate.rst  reloader.rst
specs/hibiscus/: cluster-template-driver-selection.rst  nodegroup-labels-taints.rst
specs/ocata/: cluster-creds-management-phase-1.rst  driver-encapsulation.rst
specs/pike/: positional-name.rst
specs/pre-ocata/implemented/: container-volume-integration-model.rst  open-dcos.rst
specs/queens/: federation-api.rst
specs/stein/: magnum-nodegroups.rst
specs/ussuri/: labels-override.rst
