[metadata]
name = magnum-specs
summary = Design specifications for Magnum
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all-files = True
warning-is-error = True

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html
